--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"express": "^4.18.2",
 		"express-session": "^1.18.0",
 		"html2pdf.js": "^0.10.1",
+		"method-override": "^3.0.0",
 		"mongodb": "^6.0.0",
 		"multer": "^1.4.5-lts.1",
 		"mysql2": "^3.6.0",
